--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,6 @@ services:
     depends_on:
       - app
     container_name: nginx
-
   app:
     build:
       context: .
@@ -21,6 +20,11 @@ services:
     depends_on:
       - db
     container_name: laravel-app
+    command: >
+      sh -c "mkdir -p storage/framework/views storage/framework/cache storage/logs &&
+             chown -R www-data:www-data storage bootstrap/cache &&
+             chmod -R 775 storage bootstrap/cache &&
+             php-fpm"
 
   db:
     image: mysql:latest
